UIDEXP-129: Fix spacing display of Transformation fields on mapping profile view page

--- a/src/settings/MappingProfiles/MappingProfileDetails/MappingProfileDetails.css
+++ b/src/settings/MappingProfiles/MappingProfileDetails/MappingProfileDetails.css
@@ -1,3 +1,10 @@
 .recordTypesList {
   background-color: transparent !important;
 }
+
+.transformation {
+  font-size: inherit;
+  font-family: inherit;
+  letter-spacing: inherit;
+  margin: 0;
+}
